--- a/SHModMaker/SHModMaker.csproj
+++ b/SHModMaker/SHModMaker.csproj
@@ -247,6 +247,12 @@
     <Content Include="Configs\List of Tabs.txt" />
     <Content Include="Configs\Shortcuts.txt" />
     <Content Include="Configs\TODO.txt" />
+    <Content Include="Help\Advanced.html">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Help\Help.html">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <None Include="Resources\QB_female_bw.png" />
     <None Include="Resources\QB_female.png" />
     <None Include="Resources\QB_iconic.png" />
